Refactoring of stylesheets

--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -30,6 +30,9 @@
 .jsavcontainer {
   overflow:hidden;
   width: 100%;
+  padding: 10px;
+  border: 1px solid black;
+  background-color: white;
 }
 
 /*** OUTPUT STYLING ***/
