--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -30,9 +30,10 @@
 .jsavcontainer {
   overflow:hidden;
   width: 100%;
-  padding: 10px;
+  padding: 0.7em;
   border: 1px solid black;
   background-color: white;
+  margin: 1em auto;
 }
 
 /*** OUTPUT STYLING ***/
