--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -76,9 +76,12 @@ svg {
 .controls a {
   display: inline-block;
   color: transparent;
-  width: 50px;
-  height: 50px;
-  margin: 20px;
+  width: 45px;
+  height: 45px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  margin-left: 40px;
+  margin-right: 40px;
   background-color: #aaa;
   -moz-border-radius: 20px;
   -webkit-border-radius: 20px;
