Fix for problems with bar arrays in Chrome/Webkit (see #23 and #24)

--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -129,6 +129,7 @@ input {font-size: 0.7em; }
   font-size: 90%;
   position: relative;
   top: 95%;
+	vertical-align: middle;
 }
 /***** END STYLING OF THE ARRAY DATA STRUCTURE *****/
 
