Speed choice setting is now set to the current speed when opening setting (see #14)

--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -77,7 +77,7 @@ input {font-size: 0.7em; }
 }
 .indexlabel {
   display: inline-block;
-  width: 45px;
+  width: inherit;
   height: 20px;
   line-height: 20px;
   top: 50px;
@@ -232,5 +232,8 @@ a.jsavsettings {
   float:right; 
   margin-right:10px; 
   display:none;
+}
+.jsavsettings .help {
+  font-size: 80%;
 }
 /**** END STYLING THE DIALOG ****/
