Support for title as a splash screen (see #1)

--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -150,6 +150,13 @@ input {font-size: 0.7em; }
   background-color: inherit;
   height:50px;
 }
+.output .jsavtitle {
+  display:block;
+  margin-top:35px;
+  font-size:300%;
+  text-align:center;
+}
+
 /**** END OUTPUT STYLING ***/
 
 svg {
