Arrays are now automatically centered within parent unless center:false option is used.

--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -56,6 +56,7 @@ input {font-size: 0.7em; }
   list-style: none;
   overflow: hidden;
   min-height: 50px;
+  padding: 0;
 }
 .jsavarray.jsavindexed {
   margin-bottom: 0;
