Slightly darker bg color for bar array layout

--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -98,7 +98,7 @@ input {font-size: 0.7em; }
   height: 100%;
   vertical-align: bottom;
   border: none;
-  background-color: #eee;
+  background-color: #ddd;
   margin-left: 2px;
 }
 .jsavbararray .jsavindex .jsavvalue {
