--- a/examples/AeBookAV.css
+++ b/examples/AeBookAV.css
@@ -2,11 +2,15 @@ html, body {
   background-color: #eed;
   color: #000000;
   margin: 0px;
+  padding: 10px;
 }
 
 div h1 {
   text-align: center;
-   background-color: #eed;
+  border-bottom: 1px solid black;
+  background-color: #eed;
+  margin: -8px -8px 0px -8px;
+  padding: 8px 8px 2px 8px;
 }
 
 p.annotation {
