--- a/examples/AeBookAV.css
+++ b/examples/AeBookAV.css
@@ -15,7 +15,7 @@ figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	border: 0;
-	font-size: 100%;
+	/* font-size: 100%; */
 	/* font: inherit */
 	vertical-align: baseline;
 }
