--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -7,8 +7,8 @@
 }
 
 .jsavnode {
-  width: 45px;
-  height: 45px;
+  min-width: 45px;
+  min-height: 45px;
   text-align: center;
   line-height: 45px;
   border: 1px solid black;
@@ -244,4 +244,13 @@ a.jsavsettings {
 .jsavtreenode {
   border-radius: 25px;
   position: absolute;
+}
+.jsavnullnode {
+/*  min-width: 20px;*/
+  border-color: #eee;
+  opacity: 0;
+}
+.jsavnulledge {
+  stroke: transparent;
+  opacity: 0;
 }
