--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -7,8 +7,8 @@
 }
 
 .jsavnode {
-  min-width: 45px;
-  min-height: 45px;
+  width: 45px;
+  height: 45px;
   text-align: center;
   line-height: 45px;
   border: 1px solid black;
