--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -50,14 +50,14 @@
   z-index: 99;
   display: block;
 }
-.jsavarray .jsavindex:first-of-type, .jsavarray .jsavindex:first-of-type .jsavvalue {
+.jsavhorizontalarray .jsavindex:first-of-type, .jsavhorizontalarray .jsavindex:first-of-type .jsavvalue {
   -o-border-radius: 8px 0 0 8px;
   -moz-border-radius: 8px 0 0 8px;
   -ms-border-radius: 8px 0 0 8px;
   -webkit-border-radius: 8px 0 0 8px;
   border-radius: 8px 0 0 8px;
 }
-.jsavarray .jsavindex:last-of-type, .jsavarray .jsavindex:last-of-type .jsavvalue {
+.jsavhorizontalarray .jsavindex:last-of-type, .jsavhorizontalarray .jsavindex:last-of-type .jsavvalue {
   -moz-border-radius: 0 8px 8px 0;
   -o-border-radius: 0 8px 8px 0;
   -ms-border-radius: 0 8px 8px 0;
@@ -113,6 +113,15 @@
   top: 100%;
 	vertical-align: middle;
 }
+
+/* vertical array */
+.jsavverticalarray.jsavindexed .jsavindex {
+  position: relative;
+}
+.jsavverticalarray .jsavindexlabel {
+  position: absolute;
+}
+
 /***** END STYLING OF THE ARRAY DATA STRUCTURE *****/
 
 /*** OUTPUT STYLING ***/
