-9999px hack replaced with more efficient version (http://www.zeldman.com/2012/03/01/replacing-the-9999px-hack-new-image-replacement/)

--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -270,7 +270,7 @@ a.jsavsettings {
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-color: #aaa;
-  text-indent: 9000px;
+  text-indent: 100%;
   padding: 2px;
   border: 1px solid black;
   -o-border-radius: 3px;
