Fixed swap arrows in bar layout (#60)

--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -82,6 +82,7 @@
 .jsavarray.jsavbararray {
   height: 150px;
   overflow: visible;
+  padding-bottom: 30px;
 }
 .jsavarray.jsavbararray .jsavindex {
   height: 100%;
