--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -353,6 +353,7 @@ a.jsavsettings {
   background-color: white;
   border-width: 0;
   border-radius: 8px;
+  position: relative;
 }
 .jsavcontainer svg {
   pointer-events: none;
@@ -360,11 +361,14 @@ a.jsavsettings {
 .jsavmodelanswer .jsavcounter {
   float: left;
   left: 10px;
-  position: relative;
+  position: absolute;
   top: 15px;
 }
 .jsavmodelanswer .jsavcontrols a {
   margin: 5px 20px 0 0;
+}
+.jsavmodelanswer .jsavcontrols .jsavend {
+  margin-right: 0;
 }
 .jsavdialogclose {
   background-color: #AAA;
