--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -20,7 +20,7 @@
   opacity: 1;
 }
 
-.jsavhighlight, .jsavarray.jsavbararray .jsavindex.jsavhighlight  {
+.jsavhighlight .jsavvalue, .jsavarray.jsavbararray .jsavindex.jsavhighlight .jsavvalue{
   background-color: yellow;
   border-width: 4px;
   font-size: 120%;  
