Fixed vertical array layout (margin-bottom)

--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -148,6 +148,7 @@
 /* vertical array */
 .jsavverticalarray.jsavindexed .jsavindex {
   position: relative;
+  margin-bottom: -1px;
 }
 .jsavverticalarray .jsavindexlabel {
   position: absolute;
