--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -31,6 +31,11 @@
   font-size: 120%;  
 }
 
+.jsavvalue {
+  height: 100%;
+  width: 100%;
+}
+
 /***** STYLING OF THE ARRAY DATA STRUCTURE *****/
 .jsavarray {
   position: relative;
